removed sec-pad class

--- a/assets/scss/utility/_common.scss
+++ b/assets/scss/utility/_common.scss
@@ -190,9 +190,9 @@ body {
     }
 }
 
-.sec-pad {
-    padding: 52px 0px;
-}
+// .sec-pad {
+//     padding: 52px 0px;
+// }
 .flex {
     @media (max-width: 1200px) {
         display: flex;
